--- a/src/main/resources/templates/admin/nurse/approve.html
+++ b/src/main/resources/templates/admin/nurse/approve.html
@@ -9,23 +9,24 @@
 <!-- Top -->
 <nav th:replace="fragments/bodyTop :: bodyTop" />
 
-    <!--Side Bar And Table-->
-    <section>
-        <div class="container-fluid">
-            <div class="row flex-nowrap">
-                <!--sidebar-->
-                <div th:replace="fragments/admin/sidebar :: sidebar" />
+<!--Side Bar And Table-->
+<section>
+    <div class="container-fluid">
+        <div class="row flex-nowrap">
+            <!--sidebar-->
+            <div th:replace="fragments/admin/sidebar :: sidebar" />
 
                 <!--Add Table-->
-                <div class="col py-3 container">
-                    <h2 class="text-center fw-bold mb-2">간호사 승인</h2>
+                <div class="col py-3 container" style="margin-left:100px;margin-right:100px;margin-top:60px">
+                    <h2 class="text-center fw-bold mb-2">간호사승인</h2>
 
                     <!--검색 form-->
                     <div class="d-flex justify-content-start">
                         <div class="mb-4 col-lg-3">
                             <form class="" method="post">
                                 <div class="input-group form-floting">
-                                    <input th:field="${form.name}" type="text" id="searchPatientInfo" class="form-control" placeholder="간호사 검색"/>
+                                    <input th:field="${form.name}" type="text" id="searchPatientInfo" class="form-control"
+                                        placeholder="간호사 검색" />
                                     <button class="btn btn-outline-primary" type="submit">검색</button>
                                 </div>
                             </form>
@@ -33,33 +34,33 @@
                     </div>
 
                     <!--Table List {1}-->
-                    <table class="table table-bordered table-hover" id = "patientDetail">
-                        <thead class = "table-dark">
+                    <table class="table table-bordered table-hover" id="patientDetail" style="text-align: center;">
+                        <thead class="table-dark">
                             <tr>
                                 <th scope="col" style="width: 200px;">간호사 면허 번호</th>
                                 <th scope="col" style="width: 200px;">이름</th>
-                                <th scope="col">진료과</th>
+                                <th scope="col" style="width: 200px;">진료과</th>
                                 <th scope="col" style="width: 150px;">승인</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr th:each="nurse:${nurses}" class = "accordion-toggle" data-bs-toggle = "collapse" data-bs-target="#doctorPatientDetail1">
-                                <td th:text="${nurse.licenseCode}">면허번호</td>
-                                <td th:text="${nurse.info.name}">이름</td>
-                                <td th:text="${nurse.major.description}">전공</td>
-                                <td>
-                                    <button class="btn btn-primary btn-sm" type= "button"
-                                            th:onclick="|location.href='@{/admin/nurse/approve/{nurseId} (nurseId=${nurse.getId()})}'|">승인</button>
-                                </td>
-                            </tr>   
+                        <tr th:each="nurse:${nurses}" class = "accordion-toggle" data-bs-toggle = "collapse" data-bs-target="#doctorPatientDetail1">
+                            <td th:text="${nurse.licenseCode}">면허번호</td>
+                            <td th:text="${nurse.info.name}">이름</td>
+                            <td th:text="${nurse.major.description}">전공</td>
+                            <td>
+                                <button class="btn btn-primary btn-sm" type= "button"
+                                        th:onclick="|location.href='@{/admin/nurse/approve/{nurseId} (nurseId=${nurse.getId()})}'|">승인</button>
+                            </td>
+                        </tr>
                         </tbody>
-                    </table> 
+                    </table>
 
                     <!--Pagination js로 헀는데 타임리프 가능하면 주석 해제하고 타임리프-->
                     <div class="d-flex justify-content-center">
                         <nav aria-label="Page navigation example">
-                            <ul class="pagination" id = page>
-                    
+                            <ul class="pagination" id=page>
+
                                 <!--이전 버튼-->
                                 <!--
                                 <li class="page-item">
@@ -68,7 +69,7 @@
                                     </a>
                                 </li>
                                 -->
-                    
+
                                 <!--페이지 표시 버튼-->
                                 <!--<li class="page-item"><a class="page-link" href="#">1</a></li>
                                 -->
@@ -88,22 +89,10 @@
                 </div>
             </div>
         </div>
-    </section> 
+    </section>
 
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container px-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-            <hr>
-            <p class="m-0 text-center text-white">서울특별시 광진구 능동로 206 세종대학교 대양 AI센터</p>
-        </div>
-    </footer>
-
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    
-    <!--Ohter JS-->
-    <script src="/pagiNation.js"></script>
+<!-- Footer-->
+<div th:replace="fragments/footer :: footer"/>
 </body>
 
 </html>
