--- a/src/main/resources/templates/admin/nurse/approve.html
+++ b/src/main/resources/templates/admin/nurse/approve.html
@@ -37,21 +37,121 @@
                     <table class="table table-bordered table-hover" id="patientDetail" style="text-align: center;">
                         <thead class="table-dark">
                             <tr>
-                                <th scope="col" style="width: 200px;">간호사 면허 번호</th>
-                                <th scope="col" style="width: 200px;">이름</th>
-                                <th scope="col" style="width: 200px;">진료과</th>
-                                <th scope="col" style="width: 150px;">승인</th>
+                                <th scope="col" style="width: 200px;">간호사면허번호</th>
+                                <th scope="col">이름</th>
+                                <th scope="col">성별</th>
+                                <th scope="col">전화번호</th>
+                                <th scope="col">진료과</th>
+                                <th scope="col">세부정보</th>
                             </tr>
                         </thead>
                         <tbody>
                         <tr th:each="nurse:${nurses}" class = "accordion-toggle" data-bs-toggle = "collapse" data-bs-target="#doctorPatientDetail1">
-                            <td th:text="${nurse.licenseCode}">면허번호</td>
-                            <td th:text="${nurse.info.name}">이름</td>
-                            <td th:text="${nurse.major.description}">전공</td>
+                            <td th:text="${nurse.code}">면허번호</td>
+                            <td th:text="${nurse.name}">이름</td>
+                            <td th:text="${nurse.sex}">성별</td>
+                            <td th:text="${nurse.phoneNumber}">전화번호</td>
+                            <td th:text="${nurse.major}">진료과</td>
                             <td>
-                                <button class="btn btn-primary btn-sm" type= "button"
-                                        th:onclick="|location.href='@{/admin/nurse/approve/{nurseId} (nurseId=${nurse.getId()})}'|">승인</button>
+                                <button class="btn btn-primary btn-sm" type="button" data-bs-toggle="modal"
+                                        th:data-bs-target="'#staticBackdrop' + ${nurse.id}">세부정보</button>
                             </td>
+                            <div class="modal fade" th:id="'staticBackdrop' + ${nurse.id}" data-bs-backdrop="static" data-bs-keyboard="false"
+                                 tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                    aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <!--모달창내용-->
+                                            <div style="border-left:4px solid rgb(193 223 255);">
+                                                <h6 class="mb-2" style="margin-top:10px;margin-left:6px">기본 정보</h6>
+                                            </div>
+
+                                            <div class="input-group mb-0 ">
+                                        <span class="input-group-text patient" id="basic-addon1"
+                                              style="width: 105px;">간호사 면허번호</span>
+                                                <span th:text="${nurse.code}" class="form-control patient patient1"
+                                                      aria-label="Username" aria-describedby="basic-addon1"></span>
+                                                <img th:src="${nurse.getFile().getStoreFileName()}" width="145" height="150" alt="photo"
+                                                     style="float : right;border:3px solid rgb(206 212 218);">
+
+                                            </div>
+
+                                            <div class="input-group mb-0" style="width: 322px;margin-top:-113px">
+                                        <span class="input-group-text patient" id="basic-addon1"
+                                              style="width: 105px;">이름</span>
+                                                <span th:text="${nurse.name}" size="100" class="form-control patient1"
+                                                      aria-label="Username" aria-describedby="basic-addon1"></span>
+                                            </div>
+
+                                            <div class="input-group mb-0" style="width: 322px;">
+                                        <span class=" input-group-text patient" id="basic-addon1"
+                                              style="width: 105px;">성별</span>
+                                                <span th:text="${nurse.sex}" class="form-control patient1"
+                                                      aria-label="Username" aria-describedby="basic-addon1"></span>
+
+                                            </div>
+                                            <div class="input-group mb-0" style="width: 322px;">
+                                        <span class="input-group-text patient" id="basic-addon1"
+                                              style="width: 105px;">전화번호</span>
+                                                <span th:text="${nurse.phoneNumber}" class="form-control patient1"
+                                                      aria-label="Username" aria-describedby="basic-addon1"></span>
+                                            </div>
+
+                                            <div class="input-group mb-0">
+                                        <span class="input-group-text patient" id="basic-addon1"
+                                              style="width: 105px;">전공</span>
+                                                <span th:text="${nurse.major}" class="form-control patient1"
+                                                      aria-label="Username" aria-describedby="basic-addon1"></span>
+                                            </div>
+                                            <!--기본정보css-->
+                                            <style>
+                                                .patient {
+                                                    height: 37.5px;
+                                                    font-size: 13px;
+                                                    border-radius: 0px;
+                                                    background-color: #eff1f4;
+                                                }
+
+                                                .patient1 {
+                                                    height: 37.5px;
+                                                    font-size: 13px;
+                                                    border-radius: 0px;
+                                                    background-color: #ffffff;
+                                                }
+                                            </style>
+                                            <!--모달창내용 끝-->
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-primary btn-sm" data-bs-dismiss="modal"
+                                                    th:onclick="|location.href='@{/admin/nurse/approve/{nurseId} (nurseId=${nurse.getId()})}'|">
+                                                승인
+                                            </button>
+                                            <!--버튼css-->
+                                            <style>
+                                                .name_search {
+                                                    background-color: dodgerblue;
+                                                    border: 1px solid dodgerblue;
+                                                }
+
+                                                .name_search:hover {
+                                                    background-color: rgb(16, 134, 252);
+                                                    border: 1px solid rgb(16, 134, 252);
+                                                }
+
+                                                .pre:hover {
+                                                    background-color: #f4f4f4;
+                                                    border: 1px solid #f4f4f4;
+                                                }
+                                            </style>
+                                            <!--버튼css End-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </tr>
                         </tbody>
                     </table>
