--- a/src/main/resources/templates/fragments/nurse/sidebar.html
+++ b/src/main/resources/templates/fragments/nurse/sidebar.html
@@ -11,28 +11,16 @@
                 </a>
             </li>
             <li>
-                <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
-                    <i class="bi bi-person fs-3"></i> <span class="ms-1 d-none d-sm-inline">환자기본정보</span>
+                <a th:onclick="|location.href='@{/nurse/patient}'|" class="nav-link px-0 align-middle text-white" style="cursor:pointer">
+                    <i class="bi bi-person fs-3"></i>
+                    <span class="ms-1 d-none d-sm-inline">환자기본정보</span>
                 </a>
-                <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                    <li class="w-100">
-                        <a th:onclick="|location.href='@{/nurse/patient}'|" class="nav-link px-0 text-white">
-                            <span class="d-none d-sm-inline">환자 기본정보 등록</span>
-                        </a>
-                    </li>
-                </ul>
             </li>
             <li>
-                <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
+                <a th:onclick="|location.href='@{/nurse/chart}'|" class="nav-link px-0 align-middle text-white" style="cursor:pointer">
                     <i class="bi bi-person fs-3"></i>
-                    <span class="ms-1 d-none d-sm-inline">환자차트</span></a>
-                <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                    <li class="w-100">
-                        <a th:onclick="|location.href='@{/nurse/chart}'|" class="nav-link px-0 text-white">
-                            <span class="d-none d-sm-inline">환자 차트 등록</span>
-                        </a>
-                    </li>
-                </ul>
+                    <span class="ms-1 d-none d-sm-inline">환자차트</span>
+                </a>
             </li>
             <li>
                 <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-white">
